# mainslab_test_task

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
api/: mixins.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_bill_sum.py  0003_alter_bill_number.py
files/: bills.xlsx  client_org.xlsx
test_task/: settings.py  urls.py
